# barbq

./: .gitignore  .gitmodules  LICENSE  README.md  query.py  scratch.txt  setup.cfg  setup.py
barbq/: keywords.py  query.py
barbq/tests/: foo_test.py
codegen/: buildBigQueryTypes.js  buildTypeSystem.js  builder.js  generated.py  grammar.js  grammarTypes.js  keywords.js  preamble.py
codegen/config/: expressions.txt  grammar.txt  keywords.txt  minigrammar.txt
docs/: CFG.md  CONTRIBUTOR.md  USER.md
docs/cfg/: raw.txt  scratch.txt
generator/: builder.js  builder.ts  generated.py  grammar.txt  package-lock.json  package.json  scraper.ts  tsconfig.json
src/barbq/: query.py
tests/: foo_test.py
wonka/: class_generator.js  generators.js  grammar_builder.js  package-lock.json  package.json  type_system_generator.js
wonka/generators/: python.js  ruby.js  rust.js  typescript.js
