[metadata]
name = barbq
version = 0.0.2
author = Kirby Gordon
author_email = kirby.gordon@faraday.io
description = Python-native SQL dialect that renders to BigQuery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faradayio/barbq
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src